--- a/LeagueManagement/Views/Grounds/Create.cshtml
+++ b/LeagueManagement/Views/Grounds/Create.cshtml
@@ -17,15 +17,6 @@
                 <h4>Ground</h4>
                 <hr />
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-
-                @*<div class="form-group">
-                        @Html.LabelFor(model => model.Id, htmlAttributes: new { @class = "col-sm-4 control-label" })
-                        <div class="col-md-8">
-                            @Html.EditorFor(model => model.Id, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.Id, "", new { @class = "text-danger" })
-                        </div>
-                    </div>*@
-
                 <div class="form-group">
                     @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "col-sm-4 control-label" })
                     <div class="col-md-8">
@@ -49,106 +40,20 @@
                         @Html.ValidationMessageFor(model => model.Directions, "", new { @class = "text-danger" })
                     </div>
                 </div>
-
                 <div class="form-group">
                     <div class="col-md-offset-4 col-md-10">
-                        <input type="submit" value="Create" class="btn btn-default create" />
+                        <div class="register">
+                            @Html.ActionLink("Back", "Index")
+                            <input type="submit" value="Create" class="btn btn-default create" />
+                        </div>
                     </div>
                 </div>
+
             </div>
         }
-
-        <div class="form-group">
-
-            <b> @Html.ActionLink("Back To List", "Index", new { htmlAttributes = new { @class = "col-sm-12 control-label back" } })</b>
-
-
-        </div>
-
     </div>
 </div>
-
-
-<div class="col-md-4 col-sm-4">
-    <div class="maintabs">
-        <ul class="nav nav-tabs" id="myTab" role="tablist">
-            <li class="active"><a href="#tab-1" role="tab" data-toggle="tab">Results</a></li>
-            <li class=""><a href="#tab-2" role="tab" data-toggle="tab">Schedule</a></li>
-        </ul>
-        <div class="tab-content">
-            <div class="tab-pane fade in active" id="tab-1">
-                <ul class="schedulelist">
-                    <li>
-                        <div class="">
-                            Final: <a href="#"> Blue Whales v Garudas</a>
-                        </div>
-                        <div class="">09/26/2015 - Blue Whales won by 46 runs</div>
-                    </li>
-                    <li>
-                        <div class="">
-                            Final: <a href="#"> Blue Whales v Garudas</a>
-                        </div>
-                        <div class="">09/26/2015 - Blue Whales won by 46 runs</div>
-                    </li>
-                    <li>
-                        <div class="">
-                            Final: <a href="#"> Blue Whales v Garudas</a>
-                        </div>
-                        <div class="">09/26/2015 - Blue Whales won by 46 runs</div>
-                    </li>
-                    <li>
-                        <div class="">
-                            Final: <a href="#"> Blue Whales v Garudas</a>
-                        </div>
-                        <div class="">09/26/2015 - Blue Whales won by 46 runs</div>
-                    </li>
-                    <li>
-                        <div class="">
-                            Final: <a href="#"> Blue Whales v Garudas</a>
-                        </div>
-                        <div class="">09/26/2015 - Blue Whales won by 46 runs</div>
-                    </li>
-                </ul>
-            </div><!--/.tab-pane -->
-            <div class="tab-pane fade in" id="tab-2">
-                <ul class="schedulelist">
-                    <li>
-                        <div class="">
-                            Final: <a href="#"> Blue Whales v Garudas</a>
-                        </div>
-                        <div class="">09/26/2015 - Blue Whales won by 46 runs</div>
-                    </li>
-                    <li>
-                        <div class="">
-                            Final: <a href="#"> Blue Whales v Garudas</a>
-                        </div>
-                        <div class="">09/26/2015 - Blue Whales won by 46 runs</div>
-                    </li>
-                    <li>
-                        <div class="">
-                            Final: <a href="#"> Blue Whales v Garudas</a>
-                        </div>
-                        <div class="">09/26/2015 - Blue Whales won by 46 runs</div>
-                    </li>
-                    <li>
-                        <div class="">
-                            Final: <a href="#"> Blue Whales v Garudas</a>
-                        </div>
-                        <div class="">09/26/2015 - Blue Whales won by 46 runs</div>
-                    </li>
-                    <li>
-                        <div class="">
-                            Final: <a href="#"> Blue Whales v Garudas</a>
-                        </div>
-                        <div class="">09/26/2015 - Blue Whales won by 46 runs</div>
-                    </li>
-                </ul>
-            </div><!--/.tab-pane -->
-        </div>
-    </div>
-</div>
-
-
+@Html.Partial("_PartialStyle")
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
