--- a/LeagueManagement/Views/Grounds/Delete.cshtml
+++ b/LeagueManagement/Views/Grounds/Delete.cshtml
@@ -1,58 +1,51 @@
 ﻿@model LMEntities.Models.Ground
-
 @{
     ViewBag.Title = "Delete";
 }
-<h3>Are you sure you want to delete this?</h3>
 <div class="col-md-8 col-sm-6 mininumheight">
     <div id="loginbox" style="margin-top:10px;" class="mainbox col-md-9 col-md-offset-1 col-sm-9">
-
-        <h4>Ground</h4>
-        <hr />
-        <div class="form-horizontal team">
-
-            <div class="form-group">
-                <label for="inputEmail3" class="col-sm-4 control-label">
-                    @Html.DisplayNameFor(model => model.Name)
-                </label>
-                <div class="col-sm-8">
-                    @Html.DisplayFor(model => model.Name)
-                </div>
-            </div>
-            <div class="form-group">
-                <label for="inputEmail3" class="col-sm-4 control-label">
-                    @Html.DisplayNameFor(model => model.Address)
-                </label><div class="col-sm-8">
-
-                    @Html.DisplayFor(model => model.Address)
-                </div>
-            </div>
-            <div class="form-group">
-                <label for="inputEmail3" class="col-sm-4 control-label">
-                    @Html.DisplayNameFor(model => model.Directions)
-                </label><div class="col-sm-8">
-
-
-                    @Html.DisplayFor(model => model.Directions)
-                </div>
-            </div>
-        </div>
-
         @using (Html.BeginForm())
         {
             @Html.AntiForgeryToken()
+            <h3>Are you sure you want to delete this?</h3>
+            <h4>Ground</h4>
+            <hr />
+            <div class="form-horizontal team">
+                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                <label for="inputEmail3">
+                    @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+                </label>
+                <div class="form-group">
+                    <label for="inputEmail3" class="col-sm-4 control-label">
+                        @Html.DisplayNameFor(model => model.Name)
+                    </label>
+                    <div class="col-sm-8">
+                        @Html.DisplayFor(model => model.Name)
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="inputEmail3" class="col-sm-4 control-label">
+                        @Html.DisplayNameFor(model => model.Address)
+                    </label><div class="col-sm-8">
+                        @Html.DisplayFor(model => model.Address)
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="inputEmail3" class="col-sm-4 control-label">
+                        @Html.DisplayNameFor(model => model.Directions)
+                    </label><div class="col-sm-8">
+                        @Html.DisplayFor(model => model.Directions)
 
-            <div class="form-group">
-                <div class="col-md-offset-4 col-md-10">
-                    <input type="submit" value="Delete" class="btn btn-default  create" /> 
+                    </div>
                 </div>
             </div>
-
             <div class="form-group">
-                <label for="inputEmail3" class="col-sm-6 control-label">
-                    <b> @Html.ActionLink("Back To List", "Index", new { htmlAttributes = new { @class = "col-md-8 control-label back" } })</b>
-                </label>
-
+                <div class="col-md-offset-4 col-md-10">
+                    <div class="register">
+                        @Html.ActionLink("Back", "Index")
+                        <input type="submit" value="Delete" class="btn btn-default create" />
+                    </div>
+                </div>
             </div>
         }
     </div>
