--- a/LeagueManagement/Views/Leagues/Create.cshtml
+++ b/LeagueManagement/Views/Leagues/Create.cshtml
@@ -7,7 +7,7 @@
 <h2>Create</h2>
 
 <div class="col-md-12 col-sm-12 mininumheight">
-    <div id="loginbox" style="margin-top:10px;" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
+    <div id="loginbox" style="margin-top:10px;" class="mainbox col-md-9 col-md-offset-1 col-sm-9">
 
         @using (Html.BeginForm())
         {
@@ -26,28 +26,27 @@
                 </div>
 
                 <div class="form-group">
-                    @Html.LabelFor(model => model.OrganizationId, "OrganizationId", htmlAttributes: new { @class = "col-sm-4 control-label" })
+                    @Html.LabelFor(model => model.OrganizationId, htmlAttributes: new { @class = "col-sm-4 control-label" })
                     <div class="col-md-8">
                         @Html.DropDownList("OrganizationId", null, htmlAttributes: new { @class = "form-control" })
                         @Html.ValidationMessageFor(model => model.OrganizationId, "", new { @class = "text-danger" })
                     </div>
                 </div>
-
                 <div class="form-group">
-                    <div class="col-md-offset-2 col-md-8">
-                        <input type="submit" value="Create" class="btn btn-default" />
+                    <div class="col-md-offset-4 col-md-10">
+                        <div class="register">
+                            @Html.ActionLink("Back", "Index")
+                            <input type="submit" value="Create League" class="btn btn-default create" />
+                        </div>
                     </div>
                 </div>
             </div>
         }
-
-        <div>
-            @Html.ActionLink("Back to List", "Index")
-        </div>
-
         @section Scripts {
             @Scripts.Render("~/bundles/jqueryval")
         }
 
-        </div>
     </div>
+</div>
+
+@Html.Partial("_PartialStyle")
