--- a/LeagueManagement/Views/Leagues/Edit.cshtml
+++ b/LeagueManagement/Views/Leagues/Edit.cshtml
@@ -3,11 +3,8 @@
 @{
     ViewBag.Title = "Edit";
 }
-
-<h2>Edit</h2>
-
-<div class="col-md-12 col-sm-12 mininumheight">
-    <div id="loginbox" style="margin-top:10px;" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
+<div class="col-md-8 col-sm-8 mininumheight">
+    <div id="loginbox" style="margin-top:10px;" class="mainbox col-md-9 col-md-offset-1 col-sm-9">
 
         @using (Html.BeginForm())
         {
@@ -28,7 +25,7 @@
                 </div>
 
                 <div class="form-group">
-                    @Html.LabelFor(model => model.OrganizationId, "OrganizationId", htmlAttributes: new { @class = "col-sm-4 control-label" })
+                    @Html.LabelFor(model => model.OrganizationId, htmlAttributes: new { @class = "col-sm-4 control-label" })
                     <div class="col-md-8">
                         @Html.DropDownList("OrganizationId", null, htmlAttributes: new { @class = "form-control" })
                         @Html.ValidationMessageFor(model => model.OrganizationId, "", new { @class = "text-danger" })
@@ -36,20 +33,18 @@
                 </div>
 
                 <div class="form-group">
-                    <div class="col-md-offset-2 col-md-8">
-                        <input type="submit" value="Save" class="btn btn-default" />
+                    <div class="col-md-offset-4 col-md-10">
+                        <div class="register">
+                            @Html.ActionLink("Back", "Index")
+                            <input type="submit" value="Save" class="btn btn-default create" />
+                        </div>
                     </div>
                 </div>
             </div>
         }
-
-        <div>
-            @Html.ActionLink("Back to List", "Index")
-        </div>
-
-        @section Scripts {
-            @Scripts.Render("~/bundles/jqueryval")
-        }
-
+    </div>
 </div>
-</div>
+@Html.Partial("_PartialStyle")
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
