--- a/LeagueManagement/Views/Schedules/Create.cshtml
+++ b/LeagueManagement/Views/Schedules/Create.cshtml
@@ -18,7 +18,7 @@
         {
             @Html.AntiForgeryToken()
 
-           <div class="form-horizontal">
+            <div class="form-horizontal">
                 <h4>Create Schedule</h4>
                 <hr />
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
@@ -26,18 +26,18 @@
                     @Html.LabelFor(model => model.SeasonId, htmlAttributes: new { @class = "col-sm-4 control-label" })
                     <div class="col-md-8">
                         @*@Html.DropDownList("SeasonId",  , "Please Select", htmlAttributes: new { @class = "form-control" })*@
-                        @Html.DropDownListFor(model => model.SeasonId,ViewBag.SeasonId as IEnumerable<SelectListItem>, "Please Select", htmlAttributes: new { @class = "form-control" })
+                        @Html.DropDownListFor(model => model.SeasonId, ViewBag.SeasonId as IEnumerable<SelectListItem>, "Please Select", htmlAttributes: new { @class = "form-control" })
                         @Html.ValidationMessageFor(model => model.SeasonId, "", new { @class = "text-danger" })
                     </div>
                 </div>
 
-               
+
 
                 <div class="form-group">
                     @Html.LabelFor(model => model.HomeTeamId, htmlAttributes: new { @class = "col-sm-4 control-label" })
                     <div class="col-md-8">
                         @Html.DropDownListFor(model => model.HomeTeamId, ViewBag.HomeTeamId as IEnumerable<SelectListItem>, "Please Select", htmlAttributes: new { @class = "form-control" })
-                         @Html.ValidationMessageFor(model => model.HomeTeamId, "", new { @class = "text-danger" })
+                        @Html.ValidationMessageFor(model => model.HomeTeamId, "", new { @class = "text-danger" })
                     </div>
                 </div>
 
@@ -62,23 +62,23 @@
                     @Html.LabelFor(model => model.GroundId, htmlAttributes: new { @class = "col-sm-4 control-label" })
                     <div class="col-md-8">
                         @Html.DropDownListFor(model => model.GroundId, ViewBag.GroundId as IEnumerable<SelectListItem>, "Please Select", htmlAttributes: new { @class = "form-control" })
-                       
+
                         @Html.ValidationMessageFor(model => model.GroundId, "", new { @class = "text-danger" })
                     </div>
                 </div>
-               <div class="form-group">
-                   @Html.LabelFor(model => model.ScheduleDate, htmlAttributes: new { @class = "col-sm-4 control-label" })
-                   <div class="col-md-8">
-                       @Html.EditorFor(model => model.ScheduleDate, new { htmlAttributes = new { @class = "form-control" } })
-                       @Html.ValidationMessageFor(model => model.ScheduleDate, "", new { @class = "text-danger" })
-                   </div>
-               </div>
+                <div class="form-group">
+                    @Html.LabelFor(model => model.ScheduleDate, htmlAttributes: new { @class = "col-sm-4 control-label" })
+                    <div class="col-md-8">
+                        @Html.EditorFor(model => model.ScheduleDate, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.ScheduleDate, "", new { @class = "text-danger" })
+                    </div>
+                </div>
 
                 <div class="form-group">
                     @Html.LabelFor(model => model.StartTime, htmlAttributes: new { @class = "col-sm-4 control-label" })
                     <div class="col-md-8">
                         @Html.EditorFor(model => model.StartTime, new { htmlAttributes = new { @class = "form-control timepicker1" } })
-                      
+
                         @Html.ValidationMessageFor(model => model.StartTime, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -90,50 +90,16 @@
                         @Html.ValidationMessageFor(model => model.EndTime, "", new { @class = "text-danger" })
                     </div>
                 </div>
-
-                @*<div class="form-group">
-                        @Html.LabelFor(model => model.CreatedOn, htmlAttributes: new { @class = "col-sm-4 control-label" })
-                        <div class="col-md-8">
-                            @Html.EditorFor(model => model.CreatedOn, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.CreatedOn, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        @Html.LabelFor(model => model.CreatedBy, htmlAttributes: new { @class = "col-sm-4 control-label" })
-                        <div class="col-md-8">
-                            @Html.EditorFor(model => model.CreatedBy, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.CreatedBy, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        @Html.LabelFor(model => model.ModifiedOn, htmlAttributes: new { @class = "col-sm-4 control-label" })
-                        <div class="col-md-8">
-                            @Html.EditorFor(model => model.ModifiedOn, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.ModifiedOn, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        @Html.LabelFor(model => model.ModfiedBy, htmlAttributes: new { @class = "col-sm-4 control-label" })
-                        <div class="col-md-8">
-                            @Html.EditorFor(model => model.ModfiedBy, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.ModfiedBy, "", new { @class = "text-danger" })
-                        </div>
-                    </div>*@
-
                 <div class="form-group">
+
                     <div class="col-md-offset-4 col-md-10">
-                        <input type="submit" value="Create" class="btn btn-default create" />
+                        <div class="register">
+                            @Html.ActionLink("Back", "Index")
+                            <input type="submit" value="Create" class="btn btn-default create" />
+                            </div>
+                        </div>
                     </div>
-                </div>
-                <div class="form-group">
-
-                    <b> @Html.ActionLink("Back To List", "Index", new { htmlAttributes = new { @class = "col-sm-12 control-label back" } })</b>
-
-
-                </div>
+               
             </div>
         }
 
@@ -218,13 +184,15 @@
     </div>
 </div>
 
+@Html.Partial("_PartialStyle")
+
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
 
-<script type="text/javascript"> 
-    
-$('#ScheduleDate').datepicker();
-   
-$('.timepicker1').timepicker();
+<script type="text/javascript">
+
+    $('#ScheduleDate').datepicker();
+
+    $('.timepicker1').timepicker();
 </script>
