--- a/LeagueManagement/Views/Schedules/Delete.cshtml
+++ b/LeagueManagement/Views/Schedules/Delete.cshtml
@@ -83,18 +83,16 @@
                         @Html.DisplayFor(model => model.EndTime)
                     </div>
                 </div>
-
                 <div class="form-group">
+
                     <div class="col-md-offset-4 col-md-10">
-                        <input type="submit" value="Delete" class="btn btn-default create" />
+                        <div class="register">
+                            @Html.ActionLink("Back", "Index")
+                            <input type="submit" value="Delete" class="btn btn-default create" />
+                        </div>
                     </div>
                 </div>
-                <div class="form-group">
-                    <label for="inputEmail3" class="col-sm-6 control-label">
-                        <b> @Html.ActionLink("Back To List", "Index", new { htmlAttributes = new { @class = "col-md-8 control-label back" } })</b>
-                    </label>
-
-                </div>
+               
             </div>
         }
     </div>
