--- a/LeagueManagement/Views/Schedules/Edit.cshtml
+++ b/LeagueManagement/Views/Schedules/Edit.cshtml
@@ -46,7 +46,7 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.UmpireId, htmlAttributes: new { @class = "col-sm-4 control-label" })
                     <div class="col-md-8">
-                        @Html.EditorFor(model => model.UmpireId, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.DropDownList("Umpires",null,  htmlAttributes: new { @class = "form-control" })
                         @Html.ValidationMessageFor(model => model.UmpireId, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -84,50 +84,16 @@
                     </div>
                 </div>
 
-                @*<div class="form-group">
-                    @Html.LabelFor(model => model.CreatedOn, htmlAttributes: new { @class = "col-sm-4 control-label" })
-                    <div class="col-md-8">
-                        @Html.EditorFor(model => model.CreatedOn, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.CreatedOn, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-
                 <div class="form-group">
-                    @Html.LabelFor(model => model.CreatedBy, htmlAttributes: new { @class = "col-sm-4 control-label" })
-                    <div class="col-md-8">
-                        @Html.EditorFor(model => model.CreatedBy, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.CreatedBy, "", new { @class = "text-danger" })
-                    </div>
-                </div>
 
-                <div class="form-group">
-                    @Html.LabelFor(model => model.ModifiedOn, htmlAttributes: new { @class = "col-sm-4 control-label" })
-                    <div class="col-md-8">
-                        @Html.EditorFor(model => model.ModifiedOn, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.ModifiedOn, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-
-                <div class="form-group">
-                    @Html.LabelFor(model => model.ModfiedBy, htmlAttributes: new { @class = "col-sm-4 control-label" })
-                    <div class="col-md-8">
-                        @Html.EditorFor(model => model.ModfiedBy, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.ModfiedBy, "", new { @class = "text-danger" })
-                    </div>
-                </div>*@
-
-
-                <div class="form-group">
                     <div class="col-md-offset-4 col-md-10">
-                        <input type="submit" value="Save" class="btn btn-default create" />
+                        <div class="register">
+                            @Html.ActionLink("Back", "Index")
+                            <input type="submit" value="Save" class="btn btn-default create" />
+                        </div>
                     </div>
                 </div>
-                <div class="form-group">
-                    <label for="inputEmail3" class="col-sm-6 control-label">
-                        <b> @Html.ActionLink("Back To List", "Index", new { htmlAttributes = new { @class = "col-md-8 control-label back" } })</b>
-                        </label>
 
-                </div>
             </div>
 
         }
