--- a/LeagueManagement/Views/Seasons/Create.cshtml
+++ b/LeagueManagement/Views/Seasons/Create.cshtml
@@ -1,70 +1,53 @@
 ﻿@model LMEntities.Models.Season
-
 @{
     ViewBag.Title = "Create";
 }
-
-<h2>Create</h2>
-
-<div class="col-md-12 col-sm-12 mininumheight">
-    <div id="loginbox" style="margin-top:10px;" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
-
-
-          @using (Html.BeginForm())
+<div class="col-md-8 col-sm-8 mininumheight">
+    <div id="loginbox" style="margin-top:10px;" class="mainbox col-md-9 col-md-offset-1 col-sm-9">
+        @using (Html.BeginForm())
             {
-                @Html.AntiForgeryToken()
+            @Html.AntiForgeryToken()
 
-                <div class="form-horizontal">
-                    <h4>Season</h4>
-                    <hr />
-                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                    <div class="form-group">
-                        @Html.LabelFor(model => model.Id, htmlAttributes: new { @class = "col-sm-4 control-label" })
-                        <div class="col-md-8">
-                            @Html.EditorFor(model => model.Id, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.Id, "", new { @class = "text-danger" })
-                        </div>
+            <div class="form-horizontal">
+                <h4>Season</h4>
+                <hr />
+                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                <div class="form-group">
+                    @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "col-sm-4 control-label" })
+                    <div class="col-md-8">
+                        @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
                     </div>
-
-                    <div class="form-group">
-                        @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "col-sm-4 control-label" })
-                        <div class="col-md-8">
-                            @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
-                        </div>
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(model => model.LeagueId,  htmlAttributes: new { @class = "col-sm-4 control-label" })
+                    <div class="col-md-8">
+                        @Html.DropDownList("LeagueId", null, htmlAttributes: new { @class = "form-control" })
+                        @Html.ValidationMessageFor(model => model.LeagueId, "", new { @class = "text-danger" })
                     </div>
-
-                    <div class="form-group">
-                        @Html.LabelFor(model => model.LeagueId, "LeagueId", htmlAttributes: new { @class = "col-sm-4 control-label" })
-                        <div class="col-md-8">
-                            @Html.DropDownList("LeagueId", null, htmlAttributes: new { @class = "form-control" })
-                            @Html.ValidationMessageFor(model => model.LeagueId, "", new { @class = "text-danger" })
-                        </div>
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(model => model.OrganizationId, htmlAttributes: new { @class = "col-sm-4 control-label" })
+                    <div class="col-md-8">
+                        @Html.DropDownList("OrganizationId", null, htmlAttributes: new { @class = "form-control" })
+                        @Html.ValidationMessageFor(model => model.OrganizationId, "", new { @class = "text-danger" })
                     </div>
-
-                    <div class="form-group">
-                        @Html.LabelFor(model => model.OrganizationId, "OrganizationId", htmlAttributes: new { @class = "col-sm-4 control-label" })
-                        <div class="col-md-8">
-                            @Html.DropDownList("OrganizationId", null, htmlAttributes: new { @class = "form-control" })
-                            @Html.ValidationMessageFor(model => model.OrganizationId, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <div class="col-md-offset-2 col-md-8">
-                            <input type="submit" value="Create" class="btn btn-default" />
+                </div>
+               
+                <div class="form-group">
+                    <div class="col-md-offset-4 col-md-10">
+                        <div class="register">
+                            @Html.ActionLink("Back", "Index", "Seasons")
+                            <input type="submit" value="Create Season" class="btn btn-default create" />
                         </div>
                     </div>
                 </div>
-            }
-
-            <div>
-                @Html.ActionLink("Back to List", "Index")
             </div>
+        }
+        @section Scripts {
+            @Scripts.Render("~/bundles/jqueryval")
+        }
+    </div>
+</div>
 
-            @section Scripts {
-                @Scripts.Render("~/bundles/jqueryval")
-            }
-           
-</div>
-</div>
+@Html.Partial("_PartialStyle")
