--- a/LeagueManagement/Views/Seasons/Delete.cshtml
+++ b/LeagueManagement/Views/Seasons/Delete.cshtml
@@ -3,46 +3,58 @@
 @{
     ViewBag.Title = "Delete";
 }
+<div class="col-md-8 col-sm-6 mininumheight">
+    <div id="loginbox" style="margin-top:10px;" class="mainbox col-md-9 col-md-offset-1 col-sm-9">
+        <h1>Delete Season</h1>
+        <h3>Are you sure you want to delete this Season?</h3>
+        <div class="form-horizontal team">
 
-<h2>Delete</h2>
+            <div class="form-group">
+                <label for="inputEmail3" class="col-sm-4 control-label">
+                    @Html.DisplayNameFor(model => model.League.Name)
+                </label><div class="col-sm-8">
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Season</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.League.Name)
-        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.League.Name)
-        </dd>
+                    @Html.DisplayFor(model => model.League.Name)
+                </div>
+            </div>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Organization.Name)
-        </dt>
+            <div class="form-group">
+                <label for="inputEmail3" class="col-sm-4 control-label">
+                    @Html.DisplayNameFor(model => model.Organization.Name)
+                </label><div class="col-sm-8">
 
-        <dd>
-            @Html.DisplayFor(model => model.Organization.Name)
-        </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
+                    @Html.DisplayFor(model => model.Organization.Name)
+                </div>
+            </div>
 
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
+            <div class="form-group">
+                <label for="inputEmail3" class="col-sm-4 control-label">
+                    @Html.DisplayNameFor(model => model.Name)
+                </label><div class="col-sm-8">
 
-    </dl>
 
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
+                    @Html.DisplayFor(model => model.Name)
+                </div>
+            </div>
 
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+
+            @using (Html.BeginForm())
+            {
+                @Html.AntiForgeryToken()
+
+                <div class="form-group">
+                    <div class="col-md-offset-4 col-md-10">
+                        <div class="register">
+                            @Html.ActionLink("Back", "Index")
+                            <input type="submit" value="Delete" class="btn btn-default create" />
+                        </div>
+                    </div>
+                </div>
+            }
         </div>
-    }
+    </div>
 </div>
+
+@Html.Partial("_PartialStyle")
