--- a/LeagueManagement/Views/Seasons/Details.cshtml
+++ b/LeagueManagement/Views/Seasons/Details.cshtml
@@ -4,39 +4,44 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<div class="col-md-8 col-sm-6 mininumheight">
 
-<div>
-    <h4>Season</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.League.Name)
-        </dt>
+    <div id="loginbox" style="margin-top: 10px;" class="mainbox col-md-7 col-md-offset-1 col-sm-9">
+        <h2>Season Details</h2>
+        <hr />
+        <div class="form-horizontal team">
+            <div class="form-group">
+                <label for="inputEmail3" class="col-sm-4 control-label">
+                    @Html.LabelFor(model => model.LeagueId, htmlAttributes: new { @class = "col-sm-4 control-label" })
+                </label>
+                <div class="col-sm-8">
+                    @Html.DisplayFor(model => model.League.Name)
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="inputEmail3" class="col-sm-4 control-label">
+                    @Html.LabelFor(model => model.OrganizationId, htmlAttributes: new { @class = "col-sm-4 control-label" })
+                </label> <div class="col-sm-8">
+                    @Html.DisplayFor(model => model.Organization.Name)
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="inputEmail3" class="col-sm-4 control-label">
+                    @Html.DisplayNameFor(model => model.Name)
+                </label> <div class="col-sm-8">
+                    @Html.DisplayFor(model => model.Name)
+                </div>
+            </div>
 
-        <dd>
-            @Html.DisplayFor(model => model.League.Name)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Organization.Name)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Organization.Name)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-
-    </dl>
+            <div class="form-group">
+                <div class="col-md-offset-4 col-md-10">
+                    <div class="register">
+                        @Html.ActionLink("Back", "Index")
+                        @Html.ActionLink("Edit Season", "Edit", new { id = Model.Id })
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
+@Html.Partial("_PartialStyle")
