--- a/LeagueManagement/Views/Umpires/Delete.cshtml
+++ b/LeagueManagement/Views/Umpires/Delete.cshtml
@@ -13,15 +13,11 @@
             <h3>Are you sure you want to delete this umpire?</h3>
             <hr />
             <div class="form-horizontal team">
-
-                <div class="form-group">
-                    <label for="inputEmail3" class="col-sm-4 control-label">
-                        @Html.DisplayNameFor(model => model.EmailId)
-                    </label>
-                    <div class="col-sm-8">
-                        @Html.DisplayFor(model => model.EmailId)
-                    </div>
-                </div>
+                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                <label for="inputEmail3">
+                    @Html.ValidationMessageFor(model => model.FirstName, "", new { @class = "text-danger" })
+                </label>
+               
                 <div class="form-group">
                     <label for="inputEmail3" class="col-sm-4 control-label">
                         @Html.DisplayNameFor(model => model.FirstName)
@@ -42,6 +38,14 @@
 
                 <div class="form-group">
                     <label for="inputEmail3" class="col-sm-4 control-label">
+                        @Html.DisplayNameFor(model => model.EmailId)
+                    </label>
+                    <div class="col-sm-8">
+                        @Html.DisplayFor(model => model.EmailId)
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="inputEmail3" class="col-sm-4 control-label">
                         @Html.DisplayNameFor(model => model.PhoneNumber)
                     </label>
                     <div class="col-sm-8">
@@ -51,15 +55,13 @@
 
                 <div class="form-group">
                     <div class="col-md-offset-4 col-md-10">
-                        <input type="submit" value="Delete" class="btn btn-default create" />
+                        <div class="register">
+                            @Html.ActionLink("Back", "Index")
+                            <input type="submit" value="Delete" class="btn btn-default create" />
+                        </div>
                     </div>
                 </div>
-                <div class="form-group">
-                    <label for="inputEmail3" class="col-sm-6 control-label">
-                        <b> @Html.ActionLink("Back To List", "Index", new { htmlAttributes = new { @class = "col-md-8 control-label back" } })</b>
-                    </label>
-
-                </div>
+               
             </div>
         }
     </div>
